[gd_scene load_steps=3 format=3 uid="uid://ba37plnvujw2v"]

[ext_resource type="Script" uid="uid://2ngdp4quyncn" path="res://scripts/menu.gd" id="1_yqeox"]
[ext_resource type="FontFile" uid="uid://cpnhii765sy4o" path="res://assets/atariclassic-regular.ttf" id="2_vjb58"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1152.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqeox")

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 232.0
offset_right = 648.0
offset_bottom = 256.0
theme_override_fonts/font = ExtResource("2_vjb58")
text = "Start Game"

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = 368.0
offset_right = 592.0
offset_bottom = 392.0
theme_override_fonts/font = ExtResource("2_vjb58")
text = "Quit"

[node name="Difficulty" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 496.0
offset_top = 280.0
offset_right = 624.0
offset_bottom = 304.0
theme_override_fonts/font = ExtResource("2_vjb58")
selected = 0
item_count = 3
popup/item_0/text = "Easy"
popup/item_0/id = 0
popup/item_1/text = "Normal"
popup/item_1/id = 1
popup/item_2/text = "Hard"
popup/item_2/id = 2

[node name="Robot" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 424.0
offset_top = 328.0
offset_right = 696.0
offset_bottom = 352.0
theme_override_fonts/font = ExtResource("2_vjb58")
button_pressed = true
text = "Robot opponent"
flat = true

[connection signal="button_down" from="StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="button_down" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="item_selected" from="Difficulty" to="." method="_on_difficulty_item_selected"]
[connection signal="toggled" from="Robot" to="." method="_on_robot_toggled"]
